SE ha agregado contenido a la pagina principal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>BloDev.com</h1>
+        <p>Hola este es el punto de partida de mi blog
+            
+        </p>
+    </div> 
 </body>
 </html>
