--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="nav  ">
          <li class="nav-item"><a class=" nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a></li>   
          <li class="nav-item"><a class=" nav-link active " href="#">Blog</a></li> 
-         <li class="nav-item"><a class=" nav-link active" href="#">Acerca de</a></li>    
+         <li class="nav-item"><a class=" nav-link active" href="acercaDe.html">Acerca de</a></li>    
             
             
         </ul>  
